# hermes-os

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  HERMES.md  README.md  SPEC.md  migrate_to_shards.py  orchestrator-architecture.md  pipeline.yaml  pyproject.toml
docs/: AI_COMPREHENSIVE_OVERVIEW.md  AI_HISTORY.md  AI_History_Research.md  HERMES_OS_ORGANIZATION_ARCHITECTURE.md  HERMES_OS_ORGANIZATION_ARCHITECTURE_SUMMARY.md  ai-history-comprehensive-document.md  ai-history-comprehensive-research.md  ai-history-research.md  ai-history.md  人工智能发展史.md
pipelines/: Article_Pipeline.yaml  BP_Pipeline.yaml  Book_Pipeline.yaml  Docs_Pipeline.yaml
scripts/: run_book_pipeline.py  run_book_pipeline_finish.py  run_book_pipeline_parallel.py
tests/: conftest.py  test_alignment_guard.py  test_approval_tracker.py  test_artifact_handover.py  test_artifact_manager.py  test_batch_pipeline_runner.py  test_brain_enhancer.py  test_chief_agent.py  test_conclusion_extractor.py  test_concurrency_semaphore.py  test_content_generator.py  test_content_labor.py  test_context_injector.py  test_conversation_state.py  test_deployment_pipeline.py  test_doc_workflow.py  test_emotion_engine.py  test_engineering_pipeline.py  test_gateway_hook.py  test_gateway_hook_module.py  test_gene_engine.py  test_global_wiki_indexer.py  test_goal_evolution.py  test_goal_tracker.py  test_governance_layer.py  test_guardian_controller.py  test_hermes_tool_registry.py  test_integration_two_users.py  test_intelligence_pipeline.py  test_jarvis_interface.py  test_knowledge_cli.py  test_knowledge_router.py  (+27 more)
(+141 files in other folders)
