[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-os"
version = "0.1.0"
description = "Multi-user platform layer on top of hermes-agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mem0ai>=0.1.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
